@@ -1,5 +1,12 @@
 2012-12-12  Hirofumi Kosaka  <kosaka@rworks.jp>
 
+	* godmode/agentes/module_manager_editor_common.php
+	include/functions_html.php: Fixed a bug: Some of advanced
+	option for modules were not disabled even if it was linked to
+	a policy.
+
+2012-12-12  Hirofumi Kosaka  <kosaka@rworks.jp>
+
 	* godmode/agentes/module_manager_editor.php: Fixed a bug only
 	for the Enterprise version.  When 'Remote Configuration' is
 	enabled and you try to create new module, which name includes
